# rust-tutorials

./: .gitignore
ex01_hello_world/: Cargo.toml
ex01_hello_world/src/: main.rs
ex02_immutability/: Cargo.toml
ex02_immutability/src/: main.rs  sample1.rs  sample2.rs
ex03_ownership/: Cargo.toml
ex03_ownership/src/: main.rs  sample1.rs  sample2.rs
ex04_random_number_generator_using_rand/: Cargo.toml
ex04_random_number_generator_using_rand/src/: main.rs
ex05_http_request_using_reqwest/: Cargo.toml
ex05_http_request_using_reqwest/src/: main.rs
ex06_error_handling/: Cargo.toml
ex06_error_handling/src/: api.rs  main.rs
ex07_structs_and_traits/: Cargo.toml
ex07_structs_and_traits/src/: api.rs  main.rs
ex08_serialization_using_serde/: Cargo.toml
ex08_serialization_using_serde/src/: api.rs  main.rs
ex09_concurrency_using_tokio/: Cargo.toml
ex09_concurrency_using_tokio/src/: api.rs  main.rs
ex10_web_framework_using_axum/: Cargo.toml
ex10_web_framework_using_axum/src/: api.rs  main.rs
ex11_shared_state_using_arc_and_mutex/: Cargo.toml
ex11_shared_state_using_arc_and_mutex/src/: api.rs  main.rs
ex12_error_handling_using_anyhow_and_thiserror/: Cargo.toml
ex12_error_handling_using_anyhow_and_thiserror/src/: api.rs  main.rs
ex13_observability_using_tracing_and_tower-http/: Cargo.toml
ex13_observability_using_tracing_and_tower-http/src/: api.rs  main.rs
ex14_database_using_sqlite_and_sqlx-cli/: Cargo.toml
ex14_database_using_sqlite_and_sqlx-cli/migrations/: 20260422130254_create_posts_table.sql
ex14_database_using_sqlite_and_sqlx-cli/src/: api.rs  main.rs
