[package]
name = "ex09_concurrency_using_tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
# Remove "blocking", add nothing extra for reqwest as it is async by default
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
# Add tokio with 'full' features for multi-core power
tokio = { version = "1", features = ["full"] }
