[package]
name = "ex12_error_handling_using_anyhow_and_thiserror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
