[package]
name = "ex13_observability_using_tracing_and_tower-http"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

# Provides the "Layers" to auto log every incoming request
tower-http = { version = "0.5", features = ["trace"] }

# The standard async logging for Rust
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
