[package]
name = "ex14_database_using_sqlite_and_sqlx-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
